manifests/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asksage-openai-proxy
spec:
  selector:
    app: asksage-openai-proxy
  ports:
    - name: http
      port: 80
      targetPort: 8000
